{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 44,
  "lineage": "84faa99e-e265-4859-8d09-99fe67ceb435",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jj-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/networkInterfaces/jj-nic",
            "internal_domain_name_suffix": "de3mrvftm0wedddoq4rvdsyn1a.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/publicIPAddresses/jj-ip",
                "subnet_id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/virtualNetworks/jj-network/subnets/jj-subnet"
              }
            ],
            "location": "westeurope",
            "name": "jj-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "jj-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.jj-ip",
            "azurerm_resource_group.jj-rg",
            "azurerm_subnet.jj-subnet",
            "azurerm_virtual_network.jj-vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jj-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/networkSecurityGroups/jj-sg",
            "location": "westeurope",
            "name": "jj-sg",
            "resource_group_name": "jj-resources",
            "security_rule": [],
            "tags": {
              "evironment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jj-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jj-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/networkSecurityGroups/jj-sg/securityRules/jj-dev-rule",
            "name": "jj-dev-rule",
            "network_security_group_name": "jj-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "jj-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.jj-sg",
            "azurerm_resource_group.jj-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jj-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/publicIPAddresses/jj-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "jj-ip",
            "resource_group_name": "jj-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.jj-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "jj-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/virtualNetworks/jj-network/subnets/jj-subnet",
            "name": "jj-subnet",
            "resource_group_name": "jj-resources",
            "virtual_network_name": "jj-network"
          },
          "dependencies": [
            "azurerm_resource_group.jj-rg",
            "azurerm_virtual_network.jj-vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "jj-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/virtualNetworks/jj-network/subnets/jj-subnet",
            "network_security_group_id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/networkSecurityGroups/jj-sg",
            "subnet_id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/virtualNetworks/jj-network/subnets/jj-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.jj-sg",
            "azurerm_resource_group.jj-rg",
            "azurerm_subnet.jj-subnet",
            "azurerm_virtual_network.jj-vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "jj-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d4c83a19-66b3-41ac-8c6e-87a351cb0dd8",
            "id": "/subscriptions/0242634e-f513-4c94-bdb7-5be70d3bc009/resourceGroups/jj-resources/providers/Microsoft.Network/virtualNetworks/jj-network",
            "location": "westeurope",
            "name": "jj-network",
            "resource_group_name": "jj-resources",
            "tags": {
              "evironment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.jj-rg"
          ]
        }
      ]
    }
  ]
}